2009-10-08  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#138341 - Progress indicator is not visible if too long title 
	                   set to window

	* src/mb/hd-decor.c: If a dialog has a progress indicator, and the
	  title is too long, clip the title to fit and still leave the
	  progress indicator showing.

	Fixes: NB#138369 - When zooming from app to task switcher, background
	                   does not scale
	
	* src/home/hd-render-manager.c: When moving from app to ask nav, ensure
	  that while blurring stops, the zooming still continues.

	Fixes: NB#140723 - Task Launcher background should not un-blur and 
	                   un-dim when launching new app
	                   
	* src/home/hd-render-manager.h: As we're blurring the background now,
	  don't include buttons in the blurring for the loading screen.
	* src/home/hd-render-manager.c: Make sure that for the loading screen
	  we don't force the blur group to be updated, as we know that it 
	  will soon be covered with the loading animation.	                   

	Fixes: NB#131081 - Class 0 SMS not shown full screen when switched 
	                   from portrait to landscape mode

	* src/home/hd-render-manager.h	
	* src/home/hd-render-manager.c: Removed Button handling code (it is all
	  handled in HdTitleBar now). Now do hdrm_restack/set_visibilities on
	  an idle callback. Replaced actor visible checks with
	  hd_render_manager_actor_is_visible, which is safer. Now check for
	  fullscreen-ness via size instead of by Window Flag (tallies with
	  how HDRM does visibility, and works for fullscreen notes, which
	  don't have the flag).
	* src/home/hd-home.h	  
	* src/home/hd-home.c: Fixed hd_home_edit_button_move_completed callback
	  and moved show/hide code back in, allowing HDRM button code to be
	  removed. Also removed hd_home_back_button_clicked, as this was 
	  already handled in HdTitleBar.
	* src/home/hd-title-bar.c: Removed HDRM button code, and moved call